Added javadocs and more comments

--- a/PhoneMouse/app/src/main/res/layout/activity_main.xml
+++ b/PhoneMouse/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context="com.example.shrey.phonemouse.MainActivity">
 
+    <Button
+        android:id="@+id/left_mouse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Left Click"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/right_mouse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Right Click"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
