--- a/PhoneMouse/app/src/main/res/layout/activity_connection.xml
+++ b/PhoneMouse/app/src/main/res/layout/activity_connection.xml
@@ -6,29 +6,30 @@
     android:layout_height="match_parent"
     tools:context="com.example.shrey.phonemouse.ConnectionActivity">
 
-    <EditText
-        android:id="@+id/connection_address_field"
+    <TextView
+        android:id="@+id/paired_devices_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="ip address"
-        android:inputType="text"
+        android:text="Paired Devices"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/connect_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/paired_devices_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Connect"
+        app:layout_constraintTop_toBottomOf="@id/paired_devices_title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connection_address_field" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
