--- a/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
+++ b/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
@@ -25,4 +25,18 @@
         android:text="Right Click"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/move_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/right_mouse_button" />
 </android.support.constraint.ConstraintLayout>
