--- a/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
+++ b/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
@@ -26,17 +26,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/move_button"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/right_mouse_button" />
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="36dp" />
+
 </android.support.constraint.ConstraintLayout>
