--- a/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
+++ b/PhoneMouse/app/src/main/res/layout/activity_mouse.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:text="Left Click"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/canvas_view"
+        app:layout_constraintBottom_toTopOf="@+id/Instructions"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +26,7 @@
         android:layout_marginEnd="8dp"
         android:text="Right Click"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/canvas_view"
+        app:layout_constraintBottom_toTopOf="@+id/Instructions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +39,18 @@
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/Instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Make sure the phone is raised a couple of inches!"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/canvas_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
